# Neural-Network-Projects

./: README.md
Projects/Authorship-Detection/: CMakeLists.txt  Layer.h  Matrix.h  Network.h  README.md  main.cpp
Projects/Authorship-Detection/data/: example_training1.data  example_training2.data  example_vocab.vocab
